--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "cross-env": "^3.0.0",
     "css-loader": "^0.25.0",
     "file-loader": "^0.10.0",
+    "html-webpack-plugin": "^2.28.0",
+    "postcss-loader": "^1.3.0",
+    "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "vue-loader": "^10.0.0",
     "vue-template-compiler": "^2.1.10",
