--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "webpack-dev-server --inline --hot --port=8080",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "build": "npm run clear && cross-env NODE_ENV=production webpack --progress --hide-modules",
+    "clear": "rimraf dist"
   },
   "dependencies": {
     "vue": "^2.1.0",
@@ -18,9 +19,11 @@
     "babel-preset-es2015": "^6.0.0",
     "cross-env": "^3.0.0",
     "css-loader": "^0.25.0",
+    "extract-text-webpack-plugin": "2.0.0-beta.4",
     "file-loader": "^0.10.0",
     "html-webpack-plugin": "^2.28.0",
     "postcss-loader": "^1.3.0",
+    "rimraf": "^2.5.4",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "vue-loader": "^10.0.0",
