--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "repository": {},
   "license": "MIT",
   "scripts": {
-    "dev": "webpack-dev-server --inline --hot --port=8080",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server  --config ./webpack.config.js --progress --port 3001",
     "build": "npm run clear && cross-env NODE_ENV=production webpack --progress --hide-modules",
-    "clear": "rimraf dist"
+    "clear": "rimraf dist",
+    "dll": "webpack --config webpack.dll.config.js"
   },
   "dependencies": {
     "vue": "^2.1.0",
@@ -19,6 +20,7 @@
     "babel-preset-es2015": "^6.0.0",
     "cross-env": "^3.0.0",
     "css-loader": "^0.25.0",
+    "express": "^4.14.1",
     "extract-text-webpack-plugin": "2.0.0-beta.4",
     "file-loader": "^0.10.0",
     "html-webpack-plugin": "^2.28.0",
@@ -27,8 +29,11 @@
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "vue-loader": "^10.0.0",
+    "vue-style-loader": "^2.0.0",
     "vue-template-compiler": "^2.1.10",
     "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.1.0-beta.0"
+    "webpack-dev-middleware": "^1.10.1",
+    "webpack-dev-server": "^2.1.0-beta.0",
+    "webpack-hot-middleware": "^2.17.0"
   }
 }
